Stop auto-followers when metadata is resetted (#81290)